# WebAssembly-Module-for-Spectrrum-Analysis

./: .gitignore  README.md
c code/: .project  FFTImplementationCallback.c  FFTImplementationCallback.h  Makefile  WebAssembly.cpp  codedescriptor.dmr  defines.txt  fft.c  fft.h  getFreqRep.c  getFreqRep.h  getFreqRep_data.c  getFreqRep_data.h  getFreqRep_emxAPI.c  getFreqRep_emxAPI.h  getFreqRep_emxutil.c  getFreqRep_emxutil.h  getFreqRep_initialize.c  getFreqRep_initialize.h  getFreqRep_terminate.c  getFreqRep_terminate.h  getFreqRep_types.h  rtGetInf.c  rt_nonfinite.c  rtwtypes.h
c code/examples/: main.c  main.h
c code/html/: report.mldatx
c code/interface/: _coder_getFreqRep_api.c  _coder_getFreqRep_api.h  _coder_getFreqRep_mex.c  _coder_getFreqRep_mex.h
c-code/: Makefile
c-code/src/: CMakeLists.txt
c-code/src/matlab/: FFTImplementationCallback.c  FFTImplementationCallback.h  buildInfo.mat  defines.txt  fft.c  fft.h  getFreqRep.c  getFreqRep.h  getFreqRep_data.c  getFreqRep_data.h  getFreqRep_emxutil.c  getFreqRep_emxutil.h  getFreqRep_initialize.c  getFreqRep_initialize.h  getFreqRep_terminate.c  getFreqRep_terminate.h  getFreqRep_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
matlab code/: getFreqRep.m  getFreqRep.prj  test.m
matlab-code/: generateCode.m  getFreqRep.m  getFreqRep.prj  test.m
webApp/: callwasm.html  fft.html  getFreqRep.js  getFreqRep.wasm
webApp/fft/: package-lock.json  package.json
webApp/fft/include/: FFTImplementationCallback.h  getFreqRep.h  getFreqRep_data.h  (+6 more)
(+13 files in other folders)
